# project00

./: .clang-format  .clang-tidy  .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  compilecheck.sh  compose.yaml  rebuild.sh  todo.md  メモ.md
cmp/: CMakeCache.txt  Makefile  Test  TextEditor  cmake_install.cmake
compile/: CMakeLists.txt  compch.cpp
docs/html/: ApplicationManager_8hpp_source.html  FileDriver_8hpp_source.html  FileIO_8hpp_source.html  FileManager_8hpp_source.html  FileType_8hpp_source.html  InputData_8hpp_source.html  InputHandler_8hpp_source.html  InputManager_8hpp_source.html  LogData_8hpp_source.html  Logger_8hpp_source.html  SampleClass_8hpp_source.html  UI_8hpp_source.html  annotated.html  classApplicationManager_1_1ApplicationManager-members.html  classApplicationManager_1_1ApplicationManager.html  classApplicationManager_1_1ApplicationManager__coll__graph.dot  classContextPtr-members.html  classContextPtr.html  classElementPtr-members.html  classElementPtr.html  classFileDriver_1_1FileReader-members.html  classFileDriver_1_1FileReader.html  classFileDriver_1_1FileWriter-members.html  classFileDriver_1_1FileWriter.html  classFileDriver_1_1TxtFileReader-members.html  classFileDriver_1_1TxtFileReader.html  classFileDriver_1_1TxtFileReader__coll__graph.dot  classFileDriver_1_1TxtFileWriter-members.html  classFileDriver_1_1TxtFileWriter.html  classFileDriver_1_1TxtFileWriter__coll__graph.dot  classFileDriver_1_1TxtFileWriter__inherit__graph.dot  classSample-members.html  classSample.html  classSampleClass-members.html  classSampleClass.html  classUI_1_1GeneralUI-members.html  classUI_1_1GeneralUI.html  classUI_1_1GeneralUI__inherit__graph.dot  classUI_1_1NcursesUI-members.html  classUI_1_1NcursesUI.html  (+106 more)
docs/latex/: annotated.tex  classApplicationManager_1_1ApplicationManager.tex  classApplicationManager_1_1ApplicationManager__coll__graph.dot  classContextPtr.tex  classElementPtr.tex  classFileDriver_1_1FileReader.tex  classFileDriver_1_1FileWriter.tex  classFileDriver_1_1TxtFileReader.tex  classFileDriver_1_1TxtFileReader__coll__graph.dot  classFileDriver_1_1TxtFileWriter.tex  classFileDriver_1_1TxtFileWriter__coll__graph.dot  classFileDriver_1_1TxtFileWriter__inherit__graph.dot  classSample.tex  classSampleClass.tex  classUI_1_1GeneralUI.tex  classUI_1_1GeneralUI__inherit__graph.dot  classUI_1_1NcursesUI.tex  classUI_1_1NcursesUI__coll__graph.dot  classdata_1_1DataList.tex  classfileIO_1_1FileIO.tex  classfileManager_1_1FileManager.tex  classfileSystem_1_1FileContents.tex  classfileSystem_1_1TxtData.tex  classfileSystem_1_1TxtData__inherit__graph.dot  classfileSystem_1_1TxtFile.tex  classfileSystem_1_1TxtFile__inherit__graph.dot  classinputHandler_1_1CommandInput.tex  classinputHandler_1_1InputAdapter.tex  classinputHandler_1_1KeyInput.tex  classinputHandler_1_1KeyInputHandler.tex  classinputHandler_1_1KeyInputHandler__coll__graph.dot  classinputHandler_1_1KeyInput__inherit__graph.dot  classinputHandler_1_1UsrInput.tex  classinputManager_1_1InputManager.tex  classiterator_1_1AbstractArry.tex  classiterator_1_1BrowseIterator.tex  classiterator_1_1BrowseIterator__coll__graph.dot  classiterator_1_1Iterator.tex  classiterator_1_1Iterator__inherit__graph.dot  classiterator_1_1OperateIterator.tex  (+19 more)
document/document/: ApplicationManager_8hpp.html  ApplicationManager_8hpp__dep__incl.dot  ApplicationManager_8hpp__incl.dot  ApplicationManager_8hpp_source.html  Command_8cpp.html  Command_8cpp__incl.dot  Command_8hpp.html  Command_8hpp__dep__incl.dot  Command_8hpp__incl.dot  Command_8hpp_source.html  FileData_8hpp.html  FileData_8hpp__dep__incl.dot  FileData_8hpp__incl.dot  FileData_8hpp_source.html  FileDriver_8cpp.html  FileDriver_8cpp__incl.dot  FileDriver_8hpp.html  FileDriver_8hpp__dep__incl.dot  FileDriver_8hpp__incl.dot  FileDriver_8hpp_source.html  FileIO_8hpp.html  FileIO_8hpp__dep__incl.dot  FileIO_8hpp__incl.dot  FileIO_8hpp_source.html  FileManager_8hpp.html  FileManager_8hpp__dep__incl.dot  FileManager_8hpp__incl.dot  FileManager_8hpp_source.html  FileType_8hpp.html  FileType_8hpp__dep__incl.dot  FileType_8hpp__incl.dot  FileType_8hpp_source.html  InputData_8hpp.html  InputData_8hpp_source.html  InputHandler_8cpp.html  InputHandler_8cpp__incl.dot  InputHandler_8hpp.html  InputHandler_8hpp__dep__incl.dot  InputHandler_8hpp__incl.dot  InputHandler_8hpp_source.html  (+171 more)
document/latex/: ApplicationManager_8hpp.tex  ApplicationManager_8hpp__dep__incl.dot  ApplicationManager_8hpp__incl.dot  Command_8cpp.tex  Command_8cpp__incl.dot  Command_8hpp.tex  Command_8hpp__dep__incl.dot  Command_8hpp__incl.dot  FileData_8hpp.tex  FileData_8hpp__dep__incl.dot  FileData_8hpp__incl.dot  FileDriver_8cpp.tex  FileDriver_8cpp__incl.dot  FileDriver_8hpp.tex  FileDriver_8hpp__dep__incl.dot  FileDriver_8hpp__incl.dot  FileIO_8hpp.tex  FileIO_8hpp__dep__incl.dot  FileIO_8hpp__incl.dot  FileManager_8hpp.tex  FileManager_8hpp__dep__incl.dot  FileType_8hpp.tex  (+229 more)
include/: .txt  ApplicationManager.hpp  Command.hpp  FileData.hpp  FileDriver.hpp  FileIO.hpp  FileManager.hpp  FileType.hpp  InputData.hpp  InputHandler.hpp  InputManager.hpp  KeyMapping.hpp  LogData.hpp  Logger.hpp  SampleClass.hpp  Shortcuts.hpp  StackWrapper.hpp  UI.hpp  cat  common.hpp  commonType.hpp  generalType.hpp  help  iterator.hpp  sample.hpp  type.hpp
latex/: md_README.tex  md_sekkeisyo.tex  md_todo.tex
src/: Command.cpp  FileDriver.cpp  InputData.cpp  InputHandler.cpp  InputManager.cpp  Log.cpp  SampleClass.cpp  StateEditor.cpp  TextBuffer.cpp  UI.cpp  common.cpp  main.cpp  type.cpp
test/: ScreenManagerTest.cpp  Test.cpp  UITest.cpp  UItest.cpp  coreTest.cpp  generalTypeTest.cpp  index00.テスト設計書  libwrap.cpp
uml/: Sqc_ErrorHandling.puml  Sqc_Excel.puml  Sqc_File.puml  Sqc_Specifications.puml  Sqc_SysLog.puml  Sqc_Txt.puml  Sqc_UsrLog.puml  Sqc_notification.puml  Sqc_search.puml  Sqc_setting.puml  sqc_UI.puml  usecase.puml  レビュー結果.md
(+725 files in other folders)
